  * New: "cocon=COLSxROWSxSCROLLBACK" to use console scrollback with keys
    Win+PageUP, Win+PageDown or mouse weel.
  * Disabling console FLTK resize functionality.
  * Enabled blinking cursor support.
  * New menu option "exit on detach" (quit console after shutting down).
  * Redesigned menu to be more inline with today's standard menu layout.

  Kernel:
  * Version 2.6.33.5
  * Bug #3021253: Hang/Crash with memory size not bounding on 4MB.

  Buildsystem:
  * Suppress warnings from Python 2.6. (Shai Vaingast)

  Updated libraries and tools:
  * FLTK 1.1.10, fixes problems with Window border frame on Vista.

* Version 0.7.7
  Console and daemons:
  * New: "color=black,white" sets default color. (Peter Kuznetsov)
  * New: "cursor=1..99" sets cursor size of nt-console. (Peter Kuznetsov)
  * TAB as separator in command line args. (Peter Kuznetsov)
  * Suppress "<d>" KERN_DEFAULT and "<c>" KERN_CONT on daemon printk output.

  Kernel:
  * Version 2.6.26.8
    o ext4fs enabled as module, backport patch 2.6.26-ext4-7 added.
      Please read about using ext4 in kernel 2.6.26:
      http://ext4.wiki.kernel.org/index.php/Ext4_Howto#For_people_who_are_running_Debian
      (Thanks Frédéric L. W. Meunier)
    o Squashfs 3.4, Unionfs 2.5.4, Cloop 2.628
  * Version 2.6.25.20
  * CONFIG_SYSFS_DEPRECATED: Disabled. Newer udev don't like it. (El Topo)
  * scsi: Fix "unhandled opcode 51" (GPCMD_READ_DISC_INFO) for DVD/CDROM.

  Buildsystem / sources:
  * Source format cleanup. (Peter Kuznetsov)
  * premaid.sh moved into bin directory.

  Updated tools:
  * binutils 2.19.1

* Version 0.7.6
  * Bug #2895531: "mkfs.ext3 freezes on scsi disks" fixed by limit number
    of entries in scsi queue from 73 to 32, and changed type from Critical-
    into DelayedWorkQueue.
  * Bug #2890857: Fixed panic "COSCSI: response: use_sg (2) > 1".
    Walking thought scsi scatterlist with more as 1 segment now.
  * Bug #2893343: VMALLOC_END was overlapping coLinux shared host memory.